Håndterer overlapp i perioder fra kravdokument (#4465)